--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -19,7 +19,7 @@
                             <% @users.each do |user| %>
                                 <% if user.id == current_user.id %>
                                     <tr class="curgroup">
-                                        <td><%= user.full_name %></td>
+                                        <td><%= link_to user.full_name, {:controller => 'profile', :action => 'show', :id => user.id} %></td>
                                         <td><%= @scores[user.id] %></td>
                                         <% if user.lastActivity == nil %>
                                             <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
@@ -33,7 +33,7 @@
                                     </tr>
                                 <% else %>
                                     <tr>
-                                        <td><%= user.full_name %></td>
+                                        <td><%= link_to user.full_name, {:controller => 'profile', :action => 'show', :id => user.id} %></td>
                                         <td><%= @scores[user.id] %></td>
                                         <% if user.lastActivity == nil %>
                                             <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
