--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -90,6 +90,7 @@
         </div>
     </div>
 </div>
+<% unless current_user.isAdmin %>
 <div class="gradient-buttons text-center">
     <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#newGroupModal">Create New Group</button>
 </div>
@@ -160,3 +161,4 @@
     </div>
   </div>
 </div>
+<% end %>
