--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -17,7 +17,7 @@
                             <% @users.each do |user| %>
                                 <% if user.id == current_user.id %>
                                     <tr class="curgroup">
-                                        <td><%= user.full_name %></td>
+                                        <td><%= link_to user.full_name, {:controller => 'profile', :action => 'show', :id => user.id} %></td>
                                         <% if @scores[user.id]==nil %>
                                             <td>Has done nothing</td>
                                         <% elsif @scores[user.id]==0%>
@@ -35,7 +35,7 @@
                                     </tr>
                                 <% else %>
                                     <tr>
-                                        <td><%= user.full_name %></td>
+                                        <td><%= link_to user.full_name, {:controller => 'profile', :action => 'show', :id => user.id} %></td>
                                         <% if @scores[user.id]==nil %>
                                             <td>Has done nothing</td>
                                         <% elsif @scores[user.id]==0%>
