--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -75,7 +75,7 @@
                                                 <%= form_for group, :url => {:action => 'join', :id => group.id} do |g| %>
                                                     <p>Enter Group Password to Join: <%= g.password_field 'password', :id => "group_password_#{group.id}"%></p>
                                                     <br>
-                                                    <button type="submit" class='btn btn-lg btn-primary'>Join Group</button>
+                                                    <%= g.submit "Join", :class => "btn btn-lg btn-primary" %>
                                                 <% end %>
                                             </div>
                                             <div class="modal-footer">
