--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,10 @@
         <% unless current_user.groupid==nil %>
           <%= link_to "View #{current_user.groupName}", {:controller => "group", :action => "view", :id => current_user.groupid}, :class => "dropdown-item" %>
         <% end %>
+        <%= link_to "Messages", {:controller => "conversations", :action => "index"}, :class => "dropdown-item"  %>
         <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete', :class => "dropdown-item" %>
+        
+        
       </div>
     </ul>
   <% else %>
